--- a/index.html
+++ b/index.html
@@ -10,9 +10,29 @@
 <body>
 
     <nav>
-        <h3 id="title">Memory Game</h3>
+        <!-- <div class="dropdown instructions">
+            <button onclick="dropdownInstructions()" class="dropbtn instructions" id="title">Memory Game Instructions</button>
+            <div id="myDropDown instructions" class="dropdown-content instructions">
+               <h3>1. Select the game "Level".</h3>
+               <h3>2. If you select "Easy" level, you will need to match all cards within 50 seconds otherwise you lose the game</h3>
+               <h3>3. If you select "Hard" level, you will need to match all cards within 40 seconds otherwise you lose the game</h3>
+               <h3>4. If you finish the game you can click on 'Reset' button</h3>
+            </div>
+        </div> -->
+
         <div class="dropdown">
-            <h3 id="level"><button onclick="dropdown()" class="dropbtn">Level</button></h3>
+            <button onclick="dropdownInstructions()" class="dropbtn">Memory Game Instructions</button>
+            <div id="myDropDown1" class="dropdown-content">
+                <h3>1. Select the game "Level".</h3>
+                <h3>2. If you select "Easy" level, you will need to match all cards within 50 seconds otherwise you lose the game</h3>
+                <h3>3. If you select "Hard" level, you will need to match all cards within 40 seconds otherwise you lose the game</h3>
+                <h3>4. If you finish the game you can click on 'Reset' button</h3>
+             </div>
+        </div>
+
+
+        <div class="dropdown">
+            <button onclick="dropdown()" class="dropbtn" id="level">Level</button>
             <div id="myDropDown" class="dropdown-content">
                 <h3 id="gameLevel">Easy</h3>
                 <h3 id="gameLevel">Hard</h3>
@@ -22,10 +42,12 @@
         <h3 id="timeelapsed">Time <span id="time"></span></h3>
     </nav>
 
-        <table style="width:100%">
+    <h1 id="alert-level"></h1>
+
+        <table class="center-table">
             <tbody>
             <tr>
-                <td id="1" class="square"><img id="1" src="./1.png" alt="1.png"></td>
+                <td id="1" class=""><img id="1" src="./1.png" alt="1.png" style="width: 100; height: 100;"></td>
                 <td id="2" class="square"><img id="2" src="./2.png" alt="2.png"></td>
                 <td id="3" class="square"><img id="3" src="./3.png" alt="3.png"></td>
                 <td id="4" class="square"><img src="./4.png" alt="4.png"></td>
@@ -48,7 +70,8 @@
         </tbody>
         </table>
 
+        <div class="center">
         <button onclick="resetGame()">Reset</button>
-    
+       </div>
 </body>
 </html>
