fixing alert messages

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <div class="dropdown">
             <button onclick="dropdownInstructions()" class="dropbtn">Memory Game Instructions</button>
             <div id="myDropDown1" class="dropdown-content">
-                <h3>1. Select the game "Level".</h3>
+                <h3>1. Select the game "Level"</h3>
                 <h3>2. If you select "Easy" level, you will need to match all cards within 50 seconds otherwise you lose the game</h3>
                 <h3>3. If you select "Hard" level, you will need to match all cards within 40 seconds otherwise you lose the game</h3>
                 <h3>4. If you finish the game you can click on 'Reset' button</h3>
@@ -42,7 +42,7 @@
         <h3 id="timeelapsed">Time <span id="time"></span></h3>
     </nav>
 
-    <h1 id="alert-level"></h1>
+    <h2 id="alert-level"></h2>
 
         <table class="center-table">
             <tbody>
