--- a/index.html
+++ b/index.html
@@ -47,22 +47,22 @@
         <table class="center-table">
             <tbody>
             <tr>
-                <td id="1" class=""><img id="1" src="./1.png" alt="1.png" style="width: 100; height: 100;"></td>
-                <td id="2" class="square"><img id="2" src="./2.png" alt="2.png"></td>
-                <td id="3" class="square"><img id="3" src="./3.png" alt="3.png"></td>
-                <td id="4" class="square"><img src="./4.png" alt="4.png"></td>
+                <td id="1" class=""><img id="1" src="./img/1.png" alt="1.png" style="width: 100; height: 100;"></td>
+                <td id="2" class="square"><img id="2" src="./img/2.png" alt="2.png"></td>
+                <td id="3" class="square"><img id="3" src="./img/3.png" alt="3.png"></td>
+                <td id="4" class="square"><img src="./img/4.png" alt="4.png"></td>
             </tr>
             <tr>
-                <td id="5" class="square"><img src="./5.png" alt="5.png"></td>
-                <td id="6" class="square"><img src="./6.png" alt="6.png"></td>
-                <td id="7" class="square"><img src="./1.png" alt="1.png"></td>
-                <td id="8" class="square"><img src="./2.png" alt="2.png"></td>
+                <td id="5" class="square"><img src="./img/5.png" alt="5.png"></td>
+                <td id="6" class="square"><img src="./img/6.png" alt="6.png"></td>
+                <td id="7" class="square"><img src="./img/1.png" alt="1.png"></td>
+                <td id="8" class="square"><img src="./img/2.png" alt="2.png"></td>
             </tr>
             <tr>
-                <td id="9" class="square"><img src="./3.png" alt="3.png"></td>
-                <td id="10" class="square"><img src="./4.png" alt="4.png"></td>
-                <td id="11" class="square"><img src="./5.png" alt="5.png"></td>
-                <td id="12" class="square"><img src="./6.png" alt="6.png"></td>
+                <td id="9" class="square"><img src="./img/3.png" alt="3.png"></td>
+                <td id="10" class="square"><img src="./img/4.png" alt="4.png"></td>
+                <td id="11" class="square"><img src="./img/5.png" alt="5.png"></td>
+                <td id="12" class="square"><img src="./img/6.png" alt="6.png"></td>
             </tr>
             <tr>
             </tr>
